cmake_minimum_required ( VERSION 3.10 )

project(ddpt VERSION 0.97.9 LANGUAGES C CXX)
# Use version number: x.y.9 to indicate pre-release of x.(y+1) 
# Example: VERSION 0.97.9 is pre-release of 0.98

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

string(TIMESTAMP BUILD_TIME "%Y%m%d %H:%M:%S")

option ( BUILD_SHARED_LIBS "Build using shared libraries" ON)
option ( ENABLE_DEBUG "Turn on debugging (extra warnings)" OFF)
option ( DISABLE_FAST_LEBE "Use generic little-endian/big-endian code instead" OFF)
option ( DISABLE_SCSISTRINGS "Save space in executable using numeric error codes instead of strings" OFF)
option ( DISABLE_LINUXBSG "Remove support for /dev/bsg/* devices" OFF)
option ( DISABLE_LIBSGUTILS "Same as -DBUILD_SHARED_LIBS=OFF" OFF)
option ( DISABLE_NVME_SUPP "Remove support for NVMe devices (/dev/nvme*)" OFF)

if (DISABLE_LIBSGUTILS)
    set(BUILD_SHARED_LIBS OFF)
endif ()

set(FEATURE_COMMENT "//")
    
if ( ENABLE_DEBUG )
    MESSAGE( STATUS ">> Compile with DEBUG set" )
endif ( ENABLE_DEBUG )

set(IGNORE_FAST_LEBE 0)
if (DISABLE_FAST_LEBE)
    set(IGNORE_FAST_LEBE 1)
endif (DISABLE_FAST_LEBE)

set(IGNORE_LINUX_BSG 0)
if (DISABLE_LINUXBSG)
    set(IGNORE_LINUX_BSG 1)
endif ()

set(SG_SCSI_STRINGS 1)
if (DISABLE_SCSISTRINGS)
    set(SG_SCSI_STRINGS 0)
endif()

set(IGNORE_NVME 0)
if (DISABLE_NVME_SUPP)
    set(IGNORE_NVME 1)
endif()

    
include ( CheckIncludeFile )
CHECK_INCLUDE_FILE( "byteswap.h" HAVE_BYTESWAP_H )
    
include(CheckFunctionExists)

check_function_exists(posix_memalign
    HAVE_POSIX_MEMALIGN
)

set(OS_LINUX 0)
set(SG_LIB_LINUX 0)
set(OS_ANDROID 0)
set(OS_FREEBSD 0)
set(SG_LIB_FREEBSD 0)
set(OS_SOLARIS 0)
set(SG_LIB_SOLARIS 0)
set(OS_AIX 0)
set(OS_WINDOWS 0)
set(OS_CYGWIN 0)
set(OS_MINGW 0)

if(CYGWIN)
    message(STATUS "Cygwin")
    set(OS_CYGWIN 1)
elseif(MINGW)
    message(STATUS "MinGW")
    set(OS_MINGW 1)
elseif(WIN32)
    message(STATUS "Windows")
    set(OS_WINDOWS 1)
elseif(ANDROID)
    message(STATUS "Android")
    set(OS_ANDROID 1)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    message(STATUS "Linux")
    set(OS_LINUX 1)
    set(SG_LIB_LINUX 1)
    CHECK_INCLUDE_FILE( "linux/types.h" HAVE_LINUX_TYPES_H )
    CHECK_INCLUDE_FILE( "linux/bsg.h" HAVE_LINUX_BSG_H )
    CHECK_INCLUDE_FILE( "linux/kdev_t.h" HAVE_LINUX_KDEV_T_H )
elseif(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
    message(STATUS "FreeBSD")
    set(OS_FREEBSD 1)
    set(SG_LIB_FREEBSD 1)
    target_include_directories( smp_utils PRIVATE /usr/local/include )
elseif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
    message(STATUS "Solaris")
    set(OS_SOLARIS 1)
    set(SG_LIB_SOLARIS 1)
elseif(CMAKE_SYSTEM_NAME STREQUAL "AIX")
    message(STATUS "AIX")
    set(OS_AIX 1)
elseif(APPLE)
    message(STATUS "macOS")
    set(OS_MACOS 1)
else()
    message(STATUS "Unknown system: ${CMAKE_SYSTEM_NAME}")
endif()

configure_file( ${CMAKE_SOURCE_DIR}/config.h.in.cmake ${CMAKE_BINARY_DIR}/config.h )
add_definitions ( -DHAVE_CONFIG_H )

add_subdirectory( src )

add_subdirectory( doc )

install(FILES ChangeLog DESTINATION "${CMAKE_INSTALL_DOCDIR}")
install(FILES README DESTINATION "${CMAKE_INSTALL_DOCDIR}")
install(FILES AUTHORS DESTINATION "${CMAKE_INSTALL_DOCDIR}")
install(FILES CREDITS DESTINATION "${CMAKE_INSTALL_DOCDIR}")
install(FILES COPYING DESTINATION "${CMAKE_INSTALL_DOCDIR}")

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VENDOR "Douglas Gilbert")
set(CPACK_PROJECT_VERSION "${PROJECT_VERSION}")

SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION "dd clone that can use pass-through storage device interfaces")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Douglas Gilbert") #required
SET(CPACK_DEBIAN_PACKAGE_SECTION "admin")
if ( BUILD_SHARED_LIBS )
    MESSAGE( STATUS ">> Build using shared libraries (default)" )
    if ( LIBSGUTILS )
        MESSAGE( STATUS ">> Found shared library: ${LIBSGUTILS}" )
        SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libsgutils2 (= ${PROJECT_VERSION})")
        SET(CPACK_RPM_PACKAGE_DEPENDS "libsgutils2 (= ${PROJECT_VERSION})")
    else ( LIBSGUTILS )
        MESSAGE( STATUS ">> Did not find shared library: ${LIBSGUTILS}" )
	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "")
	SET(CPACK_RPM_PACKAGE_DEPENDS "")
    endif ( LIBSGUTILS )
else ( BUILD_SHARED_LIBS )
    MESSAGE( STATUS ">> Trying to build a static executable" )
    SET(CPACK_DEBIAN_PACKAGE_DEPENDS "")
    SET(CPACK_RPM_PACKAGE_DEPENDS "")
endif ( BUILD_SHARED_LIBS )
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)

SET(CPACK_RPM_PACKAGE_DESCRIPTION "dd clone that can use pass-through storage device interfaces")
SET(CPACK_RPM_PACKAGE_LICENSE "BSD-2-clause")
SET(CPACK_RPM_PACKAGE_VENDOR "Douglas Gilbert")
set(CPACK_RPM_FILE_NAME RPM-DEFAULT)

SET(CPACK_GENERATOR "DEB;RPM")

include(CPack)
include(CTest)
