SUBDIRS =	src doc

EXTRA_DIST = \
	autogen.sh \
	doc/ddpt.8.html

distclean-local:
	rm -rf \
	  ar-lib \
	  autom4te.cache \
	  aclocal.m4 \
	  compile \
	  configure \
	  config.guess \
	  config.sub \
	  config.h.in \
	  config.h \
	  Makefile \
	  Makefile.in \
	  missing \
	  install-sh \
	  depcomp

